@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="no" ?>
 <Config>
 
-    <!-- 服务器节点类型 0:管理节点，1:工作节点 -->
-    <NodeType>0</NodeType>
+    <!-- 服务器节点类型 1:管理节点，2:工作节点 -->
+    <NodeType>1</NodeType>
 
 </Config>
